# dashy

./: .dockerignore  .gitignore  Dockerfile  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
.kuro/: config.yaml
.kuro/agents/: Luna.yaml  Mara.yaml  Priya.yaml  Sven.yaml
.kuro/flows/: implement-issue.md  implement-issue.yaml
.kuro/rules/: clean-code.md  git-workflow.md  python-style.md
docs/: architecture.md
src/dashy/: __init__.py  cli.py  http.py  ip.py  models.py  news.py  weather.py
tests/: __init__.py  test_cli.py  test_http.py  test_ip.py  test_news.py  test_placeholder.py  test_weather.py
