[project]
name = "dashy"
version = "0.1.0"
description = "Morning briefing CLI built by an AI agent team"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Charalambos Emmanouilidis" },
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
dashy = "dashy.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashy"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", ".direnv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
